fixed css, project title overflow ellipsis

--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,10 @@ a.learn-more {
 }
 .project-title {
   height: 50px;
+  white-space: nowrap;
+	width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .bitly .resource {
   height: 50px;
